[package]
name = "db"
version = "0.1.0"
authors = ["smehlhoff"]
edition = "2018"

[dependencies.diesel]
version = "1.4.2"
default-features = false
features = ["sqlite", "chrono"]

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.9.0"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
